--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,157 @@
+@font-face{
+    font-family: logoFont;
+    src:url(Fonts/Aboreto-Regular.ttf);
+}
+
 body{
     margin: 0;
     padding: 0;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    background-color:rgb(49, 49, 49);
 }
 
+/*Containers*/
+
 .container{
+    margin: 0px;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    width: 100vw;
+    align-items: stretch;
+    justify-content: center;
+    width: 80vw;
     height: 100vh;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .imagecontainer{
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
     background-image: url(images/pexels-jakub-novacek-924824.jpg);
     background-size: cover;
     flex: 1;
     width: 2fr;
+    color: white;
 }
 
 .formcontainer{
     display: flex;
     flex-direction: column;
+    justify-content: center;
     flex: 2;
     width: 1fr;
+    background-color: rgb(189, 189, 189);
+}
+
+.formcontainer > :not(.formbox){
+    margin-left:30px;
+    margin-right:30px;
+}
+
+/*Image side*/
+
+.logo{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 15rem;
+    background-color: rgba(114, 114, 114, 0.144);
+    height: 20%;
+    width: 100%;
+    font-family: logoFont;
+}
+
+.logoimage{
+    height: 60%;
+}
+
+/*Form side*/
+
+.formbox{
+    background-color: white;
+    box-shadow: 3px 3px 5px 2px rgba(0, 0, 0, 0.199);
+    padding:30px;
+    margin-bottom: 30px;
+}
+
+.form-actual{
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+}
+
+.formseparator{
+    display:flex;
+    flex-direction: column;
+}
+
+/*Text*/
+
+.welcome{
+    font-size: 20pt;
+    padding-bottom: 6rem;
+}
+
+.calltoaction{
+    margin-top: 0;
+}
+
+.label{
+    color: dimgrey;
+    font-size: 8pt;
+    text-transform: uppercase;
+    margin-bottom: 5px;
+}
+
+.text-logo{
+    font-size: 50pt;
+}
+
+.login{
+    font-size: 16pt;
+}
+
+.credit{
+    font-size: 10pt;
+    font-style: italic;
+    color: rgba(255, 255, 255, 0.658);
+}
+
+/*Interactive*/
+
+.input{
+    margin-bottom: 10px;
+    width: 80%;
+}
+
+.input:focus{
+    background-color: #67c3f159;
+    box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.199);
+}
+
+.input:invalid{
+    background-color: #f1676759;
+}
+
+
+button{
+    padding-top:1rem;
+    padding-bottom: 1rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    color: white;
+    font-size: 16px;
+    font-weight: 300;
+    background-color: rgb(0, 83, 138);
+    border: 0px;
+    border-radius: 25px;
+    transition:100ms
+}
+
+button:hover{
+    transform:scale(1.05);
+    box-shadow: 2px 2px 3px 0px rgba(0, 0, 0, 0.199);
 }
