--- a/styles.css
+++ b/styles.css
@@ -96,11 +96,23 @@ body{
     width: 80%;
 }
 
+.bottompanel{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 /*Text*/
 
 @media only screen and (min-width : 800px){
     .welcome{
+        display: flex;
+        justify-content: center;
+        align-items: center;
         font-size: 20pt;
+        margin-bottom: 2rem;
+        width: 80%;
     }
 
     .calltoaction{
@@ -121,6 +133,9 @@ body{
     .login{
         font-size: 10pt;
         margin-top: 6rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
 
@@ -128,6 +143,7 @@ body{
 
     .welcome{
         font-size: 20pt;
+        margin-bottom: 2rem;
     }
 
     .calltoaction{
@@ -147,7 +163,7 @@ body{
     }
 
     .login{
-        font-size: 10pt;
+        font-size: 20pt;
         margin-top: 6rem;
     }
 }
